add video media to first div

--- a/deforestation/index.html
+++ b/deforestation/index.html
@@ -6,6 +6,10 @@
     
 <body>
     <div>
+        <!-- video used for full screen background-->
+        <video>
+            <source src="video/trees.mp4" type="video/mp4">
+        </video>
         <p>Our world is home to beautful forests that cover 31% of Earth's land surface.</p>
         
         <p>Not only are they home to 80 percent of the world's terrestrial biodiversity, but they are a major source of oxygen in the atmosphere.</p>
