add more images

--- a/deforestation/index.html
+++ b/deforestation/index.html
@@ -17,13 +17,16 @@
         <p>300 million people call forests home and 1.6 billion depend on them to survive.</p>
     </div>
     <div>
+        <!--background image-->
+        <img src="img/tent.jpg">
         <p>Forests also serve as places for recreational activity.</p>
 
         <p>Do you like going camping, hiking, or biking in fresh air?</p>
 
-        <p>Well you are not alone. Millions of other people travel from different parts of the world to escape to the forests to destress.</p>
+        <p>Well you are not alone. Millions of other people travel from different parts of the world to escape to the forests to de-stress.</p>
     </div>
     <div>
+        <img src="img/deforest.jpg">
         <p>Over the past 40 years, the rate of deforestation has significantly increased to satisfy the needs of the people.</p>
 
         <p>Land is needed for cropland and infrastructures.</p>
@@ -33,16 +36,17 @@
         <p>But, when deforestations occurs, the effects lead to serious consequences.</p>
     </div>
     <div>
-        <p>When the slash and burn technique is used to clear land for agricultural reasons, massive amounts of carbon dioxide are released into the atmosphere.</p>
+        <img src="img/slashnburn.jpg">
+        <p>When the slash and burn technique is used to clear land for agricultural reasons, massive amounts of carbon dioxide are released into the atmosphere, contributing to <a href="">Climate Change</a>.</p>
+        
 
-        <p>The addition of this greenhouse gas into the atmosphere is *link to climate change*</p>
     </div>
     <div>
         <p>Animals are homeless.</p>
 
         <p>They are left with limited resources and no place to go.</p>
 
-        <p>With no accessible food or shelter, they have the risk of becoming endangered or even extinct.</p>
+        <p>With no accessible food or shelter, they have the risk of becoming endangered or even <a href="">extinct.</a></p>
     </div>
 </body>
     
