--- a/public/climate-change/index.html
+++ b/public/climate-change/index.html
@@ -6,6 +6,19 @@
 </head>
     
 <body>
-    
+    <div>
+        <p>Have you noticed that summers are hotter and winters are warmer?</p> 
+        <p>Do you ever see breaking news about an extreme weather event that threatens the places people call home?</p> 
+        <p>Well, these have events happen because of the rapid climate change occurring on Earth. </p>
+    </div>
+    <div>
+        <p>People sometimes ask, “What’s the difference between global warming and climate change?” </p>
+        <p>Well, global warming refers to the long term warming of our planet while climate change refers to the changes that are happening to our planet such as a change in weather patterns and extreme weather events. </p>
+    </div>
+    <div>
+        <p></p>
+    </div>
+    <div></div>
+    <div></div>
 </body>
 </html> 
