add more content for deforestation

--- a/public/climate-change/index.html
+++ b/public/climate-change/index.html
@@ -18,7 +18,11 @@
     <div>
         <p></p>
     </div>
-    <div></div>
-    <div></div>
+    <div>
+        <p></p>
+    </div>
+    <div>
+        <p></p>
+    </div>
 </body>
 </html> 
