Updated pollution content and added images

--- a/public/pollution/index.html
+++ b/public/pollution/index.html
@@ -8,11 +8,48 @@
 	</head>
 
 	<body>
-		<div class="section">
-			<img src="images/">
-			<p>Pollution text here.</p>
+		<div>
+			<img src="../pollution/img/pollution2.jpg">
+			<p>Pollution is the introduction of harmful substances and/or contaminants into the environment.</p>
 		</div>
 
+		<div>
+			<img src="../pollution/img/Pollution_1.jpg">
+			<p>Pollution, the neccessary evil that comes with developing societies.</p>
+			<p>It comes in many forms.</p>
+			<p>Land, Air, Water, Light, Noise, etc.</p>
+			<p>Let's explore how these specific types affect our planet.</p>
+		</div>
+
+		<div>
+			<img src="../pollution/img/garbage-dump.png">
+			<p>Land Pollution</p>
+			<p>Lands and natural environments affected by the introduction of landfills being filled with both Household and Industrial waste. </p>
+			<p>According to the Environmental Protection Agency <a href="https://www.epa.gov/">(EPA)</a>, We americans produce about 4.3 pounds of waster per person per day.</p>
+		</div>
+
+		<div>
+			<img src="../pollution/img/air-pollution.jpg">
+			<p>Air Pollution</p>
+			<p>Occurs when dangerous gases and chemical vapors are introduced into the atmosphere through the burning of fossil fuels, smoke and smog as well as greenhouse gases.</p>
+		</div>
+
+		<div>
+			<img src="../pollution/img/water-pollution.jpeg">
+			<p>Water Pollution</p>
+			<p>Caused by harmful chemicals and substances such as sewage, pesticides and fertilizers being introduced to water.</p>
+			
+		</div>
+
+		<div>
+			<p>Light and Noise Pollution</p>
+		</div>
+
+		<div>
+			<p>No matter what type of pollution, both humans and wildlife are constantly being affected.</p>
+			<p>To learn more about Pollution and what YOU can do to help, feel free to visit these links:</p>
+			<p>Links here.</p>
+		</div>
 	</body>
 
 </html>
