Updated pollution images

--- a/public/pollution/index.html
+++ b/public/pollution/index.html
@@ -11,10 +11,6 @@
 		<div>
 			<img src="../pollution/img/pollution2.jpg">
 			<p>Pollution is the introduction of harmful substances and/or contaminants into the environment.</p>
-		</div>
-
-		<div>
-			<img src="../pollution/img/Pollution_1.jpg">
 			<p>Pollution, the neccessary evil that comes with developing societies.</p>
 			<p>It comes in many forms.</p>
 			<p>Land, Air, Water, Light, Noise, etc.</p>
@@ -22,27 +18,29 @@
 		</div>
 
 		<div>
-			<img src="../pollution/img/garbage-dump.png">
+			<img src="../pollution/img/land-pollution.jpg">
 			<p>Land Pollution</p>
 			<p>Lands and natural environments affected by the introduction of landfills being filled with both Household and Industrial waste. </p>
-			<p>According to the Environmental Protection Agency <a href="https://www.epa.gov/">(EPA)</a>, We americans produce about 4.3 pounds of waster per person per day.</p>
+			<p>According to the Environmental Protection Agency <a href="https://www.epa.gov/" target="_blank">(EPA)</a>, We americans produce about 4.3 pounds of waster per person per day.</p>
 		</div>
 
 		<div>
-			<img src="../pollution/img/air-pollution.jpg">
+			<img src="../pollution/img/air-pollution.png">
 			<p>Air Pollution</p>
 			<p>Occurs when dangerous gases and chemical vapors are introduced into the atmosphere through the burning of fossil fuels, smoke and smog as well as greenhouse gases.</p>
 		</div>
 
 		<div>
-			<img src="../pollution/img/water-pollution.jpeg">
+			<img src="../pollution/img/water-pollution.jpg">
 			<p>Water Pollution</p>
 			<p>Caused by harmful chemicals and substances such as sewage, pesticides and fertilizers being introduced to water.</p>
 			
 		</div>
 
 		<div>
-			<p>Light and Noise Pollution</p>
+			<img src="../pollution/img/light-pollution.jpg">
+			<p>Light Pollution</p>
+			<p>The excessive use of artificial light affects not just our views of the nighttime sky but can also affect us, the wildlife and climate of our planet.</p>
 		</div>
 
 		<div>
