add more content

--- a/public/climate-change/index.html
+++ b/public/climate-change/index.html
@@ -7,15 +7,20 @@
     
 <body>
     <div>
+        <img src="img/hotsun.jpeg">
         <p>Have you noticed that summers are hotter and winters are warmer?</p> 
         <p>Do you ever see breaking news about an extreme weather event that threatens the places people call home?</p> 
-        <p>Well, these have events happen because of the rapid climate change occurring on Earth. </p>
+        <p>Well, these events happen because of the rapid climate change occurring on Earth. </p>
     </div>
     <div>
+        <img src="img/ice-sheet.jpeg">
         <p>People sometimes ask, “What’s the difference between global warming and climate change?” </p>
-        <p>Well, global warming refers to the long term warming of our planet while climate change refers to the changes that are happening to our planet such as a change in weather patterns and extreme weather events. </p>
+        <p>Well, global warming refers to the long term warming of our planet while climate change refers to the changes that are happening to our planet.</p>
+        <p>This includes things such as a change in weather patterns and shrinking ice sheets.</p>
     </div>
     <div>
+        <p>According the <a href="https://climate.nasa.gov/evidence/">NASA</a>, Ninety-seven percent of climate scientists agree that climate-warming trends over the past century are very likely due to human activities.</p>
+        <p>Humans <a href="">pollute</a> the atmosphere.</p>
         <p></p>
     </div>
     <div>
