--- a/public/deforestation/index.html
+++ b/public/deforestation/index.html
@@ -11,6 +11,8 @@
         <video>
             <source src="video/trees.mp4" type="video/mp4">
         </video>
+        <!--If video doesn't work -->
+        <img src="img/forest-whitespace.jpg">
         <p>Our world is home to beautful forests that cover 31% of Earth's land surface.</p>
         
         <p>Not only are they home to 80 percent of the world's terrestrial biodiversity, but they are a major source of oxygen in the atmosphere.</p>
