add more content

--- a/public/climate-change/index.html
+++ b/public/climate-change/index.html
@@ -19,15 +19,16 @@
         <p>This includes things such as a change in weather patterns and shrinking ice sheets.</p>
     </div>
     <div>
-        <p>According the <a href="https://climate.nasa.gov/evidence/">NASA</a>, Ninety-seven percent of climate scientists agree that climate-warming trends over the past century are very likely due to human activities.</p>
-        <p>Humans <a href="">pollute</a> the atmosphere.</p>
-        <p></p>
+        <p>According to <a href="https://climate.nasa.gov/evidence/">NASA</a>, "97 percent of climate scientists agree that climate-warming trends over the past century are very likely due to human activities."</p>
     </div>
     <div>
-        <p></p>
+        <p>Something about cars and how we have grown dependent on them.</p>
     </div>
     <div>
-        <p></p>
+        <p>Something about the effects</p>
+    </div>
+    <div>
+        <p>Something about why it is important and what organizations agree with climate change. </p>
     </div>
 </body>
 </html> 
