created css files for each page

--- a/public/climate-change/index.html
+++ b/public/climate-change/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Climate Change</title>
+    <link rel="stylesheet" type="text/css" href="/css/climatechange.css" />
 </head>
     
 <body>
