--- a/public/deforestation/index.html
+++ b/public/deforestation/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Deforestation</title>
+    <link rel="stylesheet" type="text/css" href="/css/deforestation.css" />
 </head>
     
 <body>
