--- a/public/climate-change/index.html
+++ b/public/climate-change/index.html
@@ -16,20 +16,22 @@
     <div>
         <img src="img/ice-sheet.jpeg">
         <p>People sometimes ask, “What’s the difference between global warming and climate change?” </p>
-        <p>Well, global warming refers to the long term warming of our planet while climate change refers to the changes that are happening to our planet.</p>
-        <p>This includes things such as a change in weather patterns and shrinking ice sheets.</p>
+        <p>Well, global warming refers to the increase in Earth's average surface temperature due to rising levels of greenhouse gases while climate change refers to the broader set of changes that go along with global warming, including changes in weather patterns, the oceans, ice and snow, and ecosystems.</p>
     </div>
     <div>
+        <img src="img/city-cars-traffic-lights.jpeg">
         <p>According to <a href="https://climate.nasa.gov/evidence/">NASA</a>, "97 percent of climate scientists agree that climate-warming trends over the past century are very likely due to human activities."</p>
-    </div>
-    <div>
-        <p>Something about cars and how we have grown dependent on them.</p>
+        <p>We rely on fossil fuels to power our cars, give us light in the dark, and to produce goods that we use on a daily basis.</p>
+        <p>However, </p>
     </div>
     <div>
         <p>Something about the effects</p>
     </div>
     <div>
         <p>Something about why it is important and what organizations agree with climate change. </p>
+        <ul>
+            <li><a href="https://www3.epa.gov/climatechange/kids/faq.html">EPA</a> educate.</li>
+        </ul>
     </div>
 </body>
 </html> 
