--- a/public/climate-change/index.html
+++ b/public/climate-change/index.html
@@ -21,8 +21,8 @@
     <div>
         <img src="img/city-cars-traffic-lights.jpeg">
         <p>According to <a href="https://climate.nasa.gov/evidence/">NASA</a>, "97 percent of climate scientists agree that climate-warming trends over the past century are very likely due to human activities."</p>
-        <p>We rely on fossil fuels to power our cars, give us light in the dark, and to produce goods that we use on a daily basis.</p>
-        <p>However, </p>
+        <p>We rely on fossil fuels to power our cars, give us light in the dark, and produce goods that we use on a daily basis, just to name a few.</p>
+        <p>We have grown accustom to usin</p>
     </div>
     <div>
         <p>Something about the effects</p>
