fixed linkage for deforestation
linked the html and css properly, but now having issues linking css with
images

--- a/public/deforestation/index.html
+++ b/public/deforestation/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Deforestation</title>
-    <link rel="stylesheet" type="text/css" href="/css/deforestation.css">
+    <link rel="stylesheet" type="text/css" href="../css/deforestation.css">
     <!--fix link for html and css after-->
 </head>
     
