added basic css stuff for climate change

--- a/public/climate-change/index.html
+++ b/public/climate-change/index.html
@@ -3,31 +3,50 @@
 
 <head>
     <title>Climate Change</title>
-    <link rel="stylesheet" type="text/css" href="/css/climatechange.css" />
+    <link rel="stylesheet" type="text/css" href="../css/climatechange.css" />
 </head>
     
 <body>
-    <div>
-        <img src="img/hotsun.jpeg">
+    <div id="page1">
+        <div id="title">
+            <h1>CLIMATE CHANGE</h1>
+        </div>
+        <!-- <img src="img/hotsun.jpeg"> -->
         <p>Have you noticed that summers are hotter and winters are warmer?</p> 
         <p>Do you ever see breaking news about an extreme weather event that threatens the places people call home?</p> 
         <p>Well, these events happen because of the rapid climate change occurring on Earth. </p>
     </div>
-    <div>
-        <img src="img/ice-sheet.jpeg">
+
+    <div id="page2">
+        <div id="title">
+            <h1>CLIMATE CHANGE</h1>
+        </div>
+        <!-- <img src="img/ice-sheet.jpeg"> -->
         <p>People sometimes ask, “What’s the difference between global warming and climate change?” </p>
         <p>Well, global warming refers to the increase in Earth's average surface temperature due to rising levels of greenhouse gases while climate change refers to the broader set of changes that go along with global warming, including changes in weather patterns, the oceans, ice and snow, and ecosystems.</p>
     </div>
-    <div>
-        <img src="img/city-cars-traffic-lights.jpeg">
+
+    <div id="page3">
+        <div id="title">
+            <h1>CLIMATE CHANGE</h1>
+        </div>
+        <!-- <img src="img/city-cars-traffic-lights.jpeg"> -->
         <p>According to <a href="https://climate.nasa.gov/evidence/">NASA</a>, "97 percent of climate scientists agree that climate-warming trends over the past century are very likely due to human activities."</p>
         <p>We rely on fossil fuels to power our cars, give us light in the dark, and produce goods that we use on a daily basis, just to name a few.</p>
         <p>We have grown accustom to usin</p>
     </div>
-    <div>
+
+    <div id="page4">
+        <div id="title">
+            <h1>CLIMATE CHANGE</h1>
+        </div>
         <p>Something about the effects</p>
     </div>
-    <div>
+
+    <div id="page5">
+        <div id="title">
+            <h1>CLIMATE CHANGE</h1>
+        </div>
         <p>Something about why it is important and what organizations agree with climate change. </p>
         <ul>
             <li><a href="https://www3.epa.gov/climatechange/kids/faq.html">EPA</a> educate.</li>
