added basic css for all topics
waiting for more content for species extinction
also fixed linkage issues

--- a/public/pollution/index.html
+++ b/public/pollution/index.html
@@ -5,11 +5,16 @@
    		<meta http-equiv="X-UA-Compatible" content="IE=edge">
    		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Pollution</title>
+		<link rel="stylesheet" type="text/css" href="../css/pollution.css" />
 	</head>
 
 	<body>
-		<div>
-			<img src="../pollution/img/pollution2.jpg">
+		<div id="page1">
+			<div id="title">
+            	<h1>POLLUTION</h1>
+        	</div>
+
+			<!-- <img src="../pollution/img/pollution2.jpg"> -->
 			<p>Pollution is the introduction of harmful substances and/or contaminants into the environment.</p>
 			<p>Pollution, the neccessary evil that comes with developing societies.</p>
 			<p>It comes in many forms.</p>
@@ -17,33 +22,48 @@
 			<p>Let's explore how these specific types affect our planet.</p>
 		</div>
 
-		<div>
-			<img src="../pollution/img/land-pollution.jpg">
+		<div id="page2">
+			<div id="title">
+            	<h1>POLLUTION</h1>
+        	</div>
+			<!-- <img src="../pollution/img/land-pollution.jpg"> -->
 			<p>Land Pollution</p>
 			<p>Lands and natural environments affected by the introduction of landfills being filled with both Household and Industrial waste. </p>
 			<p>According to the Environmental Protection Agency <a href="https://www.epa.gov/" target="_blank">(EPA)</a>, We americans produce about 4.3 pounds of waster per person per day.</p>
 		</div>
 
-		<div>
-			<img src="../pollution/img/air-pollution.png">
+		<div id="page3">
+			<div id="title">
+            	<h1>POLLUTION</h1>
+        	</div>
+			<!-- <img src="../pollution/img/air-pollution.png"> -->
 			<p>Air Pollution</p>
 			<p>Occurs when dangerous gases and chemical vapors are introduced into the atmosphere through the burning of fossil fuels, smoke and smog as well as greenhouse gases.</p>
 		</div>
 
-		<div>
-			<img src="../pollution/img/water-pollution.jpg">
+		<div id="page4">
+			<div id="title">
+            	<h1>POLLUTION</h1>
+        	</div>
+			<!-- <img src="../pollution/img/water-pollution.jpg"> -->
 			<p>Water Pollution</p>
 			<p>Caused by harmful chemicals and substances such as sewage, pesticides and fertilizers being introduced to water.</p>
 			
 		</div>
 
-		<div>
-			<img src="../pollution/img/light-pollution.jpg">
+		<div id="page5">
+			<div id="title">
+            	<h1>POLLUTION</h1>
+        	</div>
+			<!-- <img src="../pollution/img/light-pollution.jpg"> -->
 			<p>Light Pollution</p>
 			<p>The excessive use of artificial light affects not just our views of the nighttime sky but can also affect us, the wildlife and climate of our planet.</p>
 		</div>
 
-		<div>
+		<div id="page6">
+			<div id="title">
+            	<h1>POLLUTION</h1>
+        	</div>
 			<p>No matter what type of pollution, both humans and wildlife are constantly being affected.</p>
 			<p>To learn more about Pollution and what YOU can do to help, feel free to visit these links:</p>
 			<p>Links here.</p>
