--- a/public/species-extinction/index.html
+++ b/public/species-extinction/index.html
@@ -5,10 +5,14 @@
    		<meta http-equiv="X-UA-Compatible" content="IE=edge">
    		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Species Extinction</title>
+		<link rel="stylesheet" type="text/css" href="../css/extinction.css" />
 	</head>
 
 	<body>
 		<div>
+			<div id="title">
+            	<h1>EXTINCTION</h1>
+        	</div>
 			
 			<p>Species Extinction Stuff here.</p>
 		</div>
