fixed a couple issues

--- a/public/deforestation/index.html
+++ b/public/deforestation/index.html
@@ -72,9 +72,11 @@
             <h1>DEFORESTATION</h1>
         </div>
         <!--background image-->
-        <!-- <img src="img/slashnburn.jpg">
-         -->
-        <p>When the slash and burn technique is used to clear land for agricultural reasons, massive amounts of carbon dioxide are released into the atmosphere, contributing to <a href="">Climate Change</a>.</p>
+
+        <img src="img/slashnburn.jpg">
+        
+        <p>When the slash and burn technique is used to clear land for agricultural reasons, massive amounts of carbon dioxide are released into the atmosphere, contributing to <a href="../climate-change/index.html">Climate Change</a>.</p>
+
         <!-- link to climate change topic --> 
 
         <div id="scroll4">
@@ -92,11 +94,15 @@
 <!--         <img src="img/koala.jpg">--> <!--(Image via @ApesFinal)-->        
         <p>Animals are homeless.</p>
         <p>They are left with limited resources and no place to go.</p>
-        <p>With no accessible food or shelter, they have the risk of becoming endangered or even <a href="">extinct.</a></p>
+
+
+        <p>With no accessible food or shelter, they have the risk of becoming endangered or even <a href="../species-extinction/index.html">extinct.</a></p>
+
 
         <div id="scroll5">
             <h1><a href="#page6">SCROLL DOWN</a></h1>
         </div>
+
     </div>
 
 
@@ -109,7 +115,6 @@
  -->        
         <p>Our world needs forests to absorb greenhouse gases, provide resources and shelter for millions of people and animals, and help sustain the water cycle that is a major component of any ecosystem, to name a few. </p>
         <p>There are many organizations that want to fight deforestation and educate people about the serious repercussions associated with it.</p>
-        
         <ul>
             <li>WWF started the Global Forest and Trade Network<a href="http://gftn.panda.org/" target="_blank">(GTFN)</a></li>
             <li><a href="http://www.eyesontheforest.or.id/index.php?page=content&cid=1" target="_blank">Eyes on the Forest</a> focuses on forest conservation and protecting the rights of people who rely on them.</li>
