fixed images on screen

--- a/public/deforestation/index.html
+++ b/public/deforestation/index.html
@@ -73,7 +73,7 @@
         </div>
         <!--background image-->
 
-        <img src="img/slashnburn.jpg">
+        <!--<img src="img/slashnburn.jpg">-->
         
         <p>When the slash and burn technique is used to clear land for agricultural reasons, massive amounts of carbon dioxide are released into the atmosphere, contributing to <a href="../climate-change/index.html">Climate Change</a>.</p>
 
