--- a/public/deforestation/index.html
+++ b/public/deforestation/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Deforestation</title>
     <link rel="stylesheet" type="text/css" href="../css/deforestation.css">
+    <link href="https://fonts.googleapis.com/css?family=Dosis|Economica|Quicksand" rel="stylesheet">
     <!--fix link for html and css after-->
 </head>
     
@@ -20,11 +21,11 @@
         <!--If video doesn't work -->
         <!-- <img src="img/forest-whitespace.jpg"> -->
         <video src="video/trees.mp4" autoplay loop></video>
-
-        <p>Our world is home to beautful forests that cover 31% of Earth's land surface.</p>   
-        <p>Not only are they home to 80 percent of the world's terrestrial biodiversity, but they are a major source of oxygen in the atmosphere.</p>
-        <p>300 million people call forests home and 1.6 billion depend on them to survive.</p>
-
+        <section id="p1" class="text">
+            <p>Our world is home to forests that cover 31% of Earth's land surface.</p>   
+            <p>Not only are they home to 80 percent of the world's terrestrial biodiversity, but they are a major source of oxygen in the atmosphere.</p>
+            <p>300 million people call forests home and 1.6 billion depend on them to survive.</p>
+        </section>
         <div id="scroll1">
             <h1><a href="#page2">SCROLL DOWN</a></h1>
         </div>
@@ -40,10 +41,11 @@
 
         <!--background image-->
         <!-- <img src="img/tent.jpg"> -->
-        <p>Forests also serve as places for recreational activity.</p>
-        <p>Do you like going camping, hiking, or biking in fresh air?</p>
-        <p>Well you are not alone. Millions of other people travel from different parts of the world to escape to the forests to de-stress.</p>
-
+        <section id="p2" class="text">
+            <p>Forests also serve as places for recreational activity.</p>
+            <p>Do you like going camping, hiking, or biking in fresh air?</p>
+            <p>Well you are not alone. Millions of other people travel from different parts of the world to escape to the forests to de-stress.</p>
+        </section>
         <div id="scroll2">
             <h1><a href="#page3">SCROLL DOWN</a></h1>
         </div>
@@ -57,11 +59,12 @@
         </div>
         <!--background image-->
         <!-- <img src="img/deforest.jpg"> -->
-
-        <p>Over the past 40 years, the rate of deforestation has significantly increased to satisfy the needs of the people.</p>
-        <p>Land is needed for cropland and infrastructures.</p>
-        <p>Wood is needed for fuel and paper.</p>
-        <p>But, when deforestations occurs, the effects lead to serious consequences.</p>
+        <section id="p3" class="text">
+            <p>Over the past 40 years, the rate of deforestation has significantly increased to satisfy the needs of the people.</p>
+            <p>Land is needed for cropland and infrastructures.</p>
+            <p>Wood is needed for fuel and paper.</p>
+            <p>But, when deforestation occurs, the effects lead to serious consequences.</p>
+        </section>
         <div id="scroll3">
             <h1><a href="#page4">SCROLL DOWN</a></h1>
         </div>
@@ -75,9 +78,9 @@
         <!--background image-->
 
         <!--<img src="img/slashnburn.jpg">-->
-        
-        <p>When the slash and burn technique is used to clear land for agricultural reasons, massive amounts of carbon dioxide are released into the atmosphere, contributing to <a href="../climate-change/index.html">Climate Change</a>.</p>
-
+        <section class="text">
+            <p>When the slash and burn technique is used to clear land for agricultural reasons, massive amounts of carbon dioxide are released into the atmosphere, contributing to <a href="../climate-change/index.html">Climate Change</a>.</p>
+        </section>
         <!-- link to climate change topic --> 
 
         <div id="scroll4">
@@ -92,14 +95,12 @@
             <h1>DEFORESTATION</h1>
         </div>
         <!--background image-->
-<!--         <img src="img/koala.jpg">--> <!--(Image via @ApesFinal)-->        
+<!--         <img src="img/koala.jpg">--> <!--(Image via @ApesFinal)--> 
+        <section class="text">
         <p>Animals are homeless.</p>
         <p>They are left with limited resources and no place to go.</p>
-
-
         <p>With no accessible food or shelter, they have the risk of becoming endangered or even <a href="../species-extinction/index.html">extinct.</a></p>
-
-
+        </section>
         <div id="scroll5">
             <h1><a href="#page6">SCROLL DOWN</a></h1>
         </div>
@@ -113,15 +114,16 @@
         </div>
         <!--background image-->
 <!--         <img src="img/forestsun.jpg">
- -->        
-        <p>Our world needs forests to absorb greenhouse gases, provide resources and shelter for millions of people and animals, and help sustain the water cycle that is a major component of any ecosystem, to name a few. </p>
-        <p>There are many organizations that want to fight deforestation and educate people about the serious repercussions associated with it.</p>
-        <ul>
-            <li>WWF started the Global Forest and Trade Network<a href="http://gftn.panda.org/" target="_blank">(GTFN)</a></li>
-            <li><a href="http://www.eyesontheforest.or.id/index.php?page=content&cid=1" target="_blank">Eyes on the Forest</a> focuses on forest conservation and protecting the rights of people who rely on them.</li>
-            <li>Cosmetic company, <a href="http://www.loreal.com/media/news/2014/jan/l%E2%80%99or%C3%A9al-committed-to-%C2%AB-0-deforestation-%C2%BB-by-2020" target="_blank">L'oreal</a>, is committed to "Zero Deforestation" by 2020.</li>
-        </ul>
-
+ -->   
+        <section class="text">
+            <p>Our world needs forests to absorb greenhouse gases, provide resources and shelter for millions of people and animals, and help sustain the water cycle that is a major component of any ecosystem, to name a few. </p>
+            <p>There are many organizations that want to fight deforestation and educate people about the serious repercussions associated with it.</p>
+            <ul>
+                <li>WWF started the Global Forest and Trade Network<a href="http://gftn.panda.org/" target="_blank">(GTFN)</a></li>
+                <li><a href="http://www.eyesontheforest.or.id/index.php?page=content&cid=1" target="_blank">Eyes on the Forest</a> focuses on forest conservation and protecting the rights of people who rely on them.</li>
+                <li>Cosmetic company, <a href="http://www.loreal.com/media/news/2014/jan/l%E2%80%99or%C3%A9al-committed-to-%C2%AB-0-deforestation-%C2%BB-by-2020" target="_blank">L'oreal</a>, is committed to "Zero Deforestation" by 2020.</li>
+            </ul>
+        </section>
         <div id="scroll6">
             <h1><a href="#page1">TOP</a></h1>
         </div>
