edit deforest content

--- a/public/deforestation/index.html
+++ b/public/deforestation/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Deforestation</title>
     <link rel="stylesheet" type="text/css" href="../css/deforestation.css">
-    <link href="https://fonts.googleapis.com/css?family=Dosis|Economica|Quicksand" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Dosis|Economica|Quicksand:700" rel="stylesheet">
     <!--fix link for html and css after-->
 </head>
     
@@ -116,7 +116,7 @@
 <!--         <img src="img/forestsun.jpg">
  -->   
         <section class="text">
-            <p>Our world needs forests to absorb greenhouse gases, provide resources and shelter for millions of people and animals, and help sustain the water cycle that is a major component of any ecosystem, to name a few. </p>
+            <p>Our world needs forests to absorb greenhouse gases, provide resources and shelter for millions of people and animals, and give people a place for recreational activities, to name a few. </p>
             <p>There are many organizations that want to fight deforestation and educate people about the serious repercussions associated with it.</p>
             <ul>
                 <li>WWF started the Global Forest and Trade Network<a href="http://gftn.panda.org/" target="_blank">(GTFN)</a></li>
