added sticky header to all topic pages
now we have a sticky header but need to fix white space and formatting
of text

also fixed issue about video creating extra width to page but video is
really screwing up fluidity of page

--- a/public/deforestation/index.html
+++ b/public/deforestation/index.html
@@ -4,14 +4,20 @@
     <title>Deforestation</title>
     <link rel="stylesheet" type="text/css" href="../css/deforestation.css">
     <link href="https://fonts.googleapis.com/css?family=Dosis|Economica|Quicksand" rel="stylesheet">
-    <!--fix link for html and css after-->
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+	<script src="../js/stickyheader.js"></script>
 </head>
     
 <body>
-    <div id="page1">
-        <div id="title">
+	<header>
+		<h1>DEFORESTATION</h1>
+	</header>
+
+
+    <div class="page1">
+        <!-- <div id="title">
             <h1>DEFORESTATION</h1>
-        </div>
+        </div> -->
 
         <!-- video used for full screen background-->
         <!-- example http://www.stayandwander.com/ -->
@@ -20,24 +26,31 @@
         </video> -->
         <!--If video doesn't work -->
         <!-- <img src="img/forest-whitespace.jpg"> -->
-        <video src="video/trees.mp4" autoplay loop></video>
+        <div class="container">
+        	<video src="video/trees.mp4" autoplay loop></video>
+        </div>
+        
         <section id="p1" class="text">
             <p>Our world is home to forests that cover 31% of Earth's land surface.</p>   
             <p>Not only are they home to 80 percent of the world's terrestrial biodiversity, but they are a major source of oxygen in the atmosphere.</p>
             <p>300 million people call forests home and 1.6 billion depend on them to survive.</p>
         </section>
+
         <div id="scroll1">
             <h1><a href="#page2">SCROLL DOWN</a></h1>
         </div>
+
+		<!-- <section id="scrolldown" class="demo">
+			<h1>Scroll Down Button #7</h1>
+			<a href="#section08"><span></span><span></span><span></span>Scroll</a>
+		</section> -->
+
     </div>
 
 
 
 
     <div id="page2">
-        <div id="title">
-            <h1>DEFORESTATION</h1>
-        </div>
 
         <!--background image-->
         <!-- <img src="img/tent.jpg"> -->
@@ -54,9 +67,7 @@
 
 
     <div id="page3">
-        <div id="title">
-            <h1>DEFORESTATION</h1>
-        </div>
+
         <!--background image-->
         <!-- <img src="img/deforest.jpg"> -->
         <section id="p3" class="text">
@@ -72,9 +83,7 @@
 
 
     <div id="page4">
-        <div id="title">
-            <h1>DEFORESTATION</h1>
-        </div>
+ 
         <!--background image-->
 
         <!--<img src="img/slashnburn.jpg">-->
@@ -91,9 +100,7 @@
 
 
     <div id="page5">
-        <div id="title">
-            <h1>DEFORESTATION</h1>
-        </div>
+
         <!--background image-->
 <!--         <img src="img/koala.jpg">--> <!--(Image via @ApesFinal)--> 
         <section class="text">
@@ -109,9 +116,7 @@
 
 
     <div id="page6">
-        <div id="title">
-            <h1>DEFORESTATION</h1>
-        </div>
+
         <!--background image-->
 <!--         <img src="img/forestsun.jpg">
  -->   
