--- a/public/species-extinction/index.html
+++ b/public/species-extinction/index.html
@@ -9,10 +9,12 @@
 	</head>
 
 	<body>
+		<header>
+        	<h1>EXTINCTION</h1>
+    	</header>
+
 		<div>
-			<div id="title">
-            	<h1>EXTINCTION</h1>
-        	</div>
+			<!-- look at other pages for content structure -->
 			
 			<p>Species Extinction Stuff here.</p>
 		</div>
