--- a/public/pollution/index.html
+++ b/public/pollution/index.html
@@ -9,10 +9,12 @@
 	</head>
 
 	<body>
+		<header>
+        	<h1>POLLUTION</h1>
+    	</header>
+
 		<div id="page1">
-			<div id="title">
-            	<h1>POLLUTION</h1>
-        	</div>
+			
 
 			<!-- <img src="../pollution/img/pollution2.jpg"> -->
 			<p>Pollution is the introduction of harmful substances and/or contaminants into the environment.</p>
@@ -23,9 +25,7 @@
 		</div>
 
 		<div id="page2">
-			<div id="title">
-            	<h1>POLLUTION</h1>
-        	</div>
+			
 			<!-- <img src="../pollution/img/land-pollution.jpg"> -->
 			<p>Land Pollution</p>
 			<p>Lands and natural environments affected by the introduction of landfills being filled with both Household and Industrial waste. </p>
@@ -33,18 +33,14 @@
 		</div>
 
 		<div id="page3">
-			<div id="title">
-            	<h1>POLLUTION</h1>
-        	</div>
+			
 			<!-- <img src="../pollution/img/air-pollution.png"> -->
 			<p>Air Pollution</p>
 			<p>Occurs when dangerous gases and chemical vapors are introduced into the atmosphere through the burning of fossil fuels, smoke and smog as well as greenhouse gases.</p>
 		</div>
 
 		<div id="page4">
-			<div id="title">
-            	<h1>POLLUTION</h1>
-        	</div>
+			
 			<!-- <img src="../pollution/img/water-pollution.jpg"> -->
 			<p>Water Pollution</p>
 			<p>Caused by harmful chemicals and substances such as sewage, pesticides and fertilizers being introduced to water.</p>
@@ -52,18 +48,14 @@
 		</div>
 
 		<div id="page5">
-			<div id="title">
-            	<h1>POLLUTION</h1>
-        	</div>
+			
 			<!-- <img src="../pollution/img/light-pollution.jpg"> -->
 			<p>Light Pollution</p>
 			<p>The excessive use of artificial light affects not just our views of the nighttime sky but can also affect us, the wildlife and climate of our planet.</p>
 		</div>
 
 		<div id="page6">
-			<div id="title">
-            	<h1>POLLUTION</h1>
-        	</div>
+			
 			<p>No matter what type of pollution, both humans and wildlife are constantly being affected.</p>
 			<p>To learn more about Pollution and what YOU can do to help, feel free to visit these links:</p>
 			<p>Links here.</p>
