--- a/public/deforestation/index.html
+++ b/public/deforestation/index.html
@@ -13,6 +13,9 @@
 <body>
 	<header>
 		<h1>DEFORESTATION</h1>
+        <a href="../../views/index.ejs" id="gohome">
+            <img src="../img/homeicon.png">
+        </a>
 	</header>
 
 
