adding more style

--- a/public/climate-change/index.html
+++ b/public/climate-change/index.html
@@ -41,13 +41,12 @@
         <!-- <img src="img/city-cars-traffic-lights.jpeg"> -->
             <p>According to <a href="https://climate.nasa.gov/evidence/">NASA</a>, "97 percent of climate scientists agree that climate-warming trends over the past century are very likely due to human activities."</p>
             <p>We rely on fossil fuels to power our cars, give us light in the dark, and produce goods that we use on a daily basis, just to name a few.</p>
-            <p>We have grown accustom to using large amounts of fossil fuels to help us get through daily activities, but we sometimes overlook the effects it has on our environment.</p>
+            <p>We have grown accustom to using large amounts of fossil fuels to help us get through daily activities, but we sometimes overlook the long-term effects it has on us and our environment.</p>
         </section>
          <div id="scroll3">
             <h1><a href="#page4">SCROLL DOWN</a></h1>
         </div>
     </div>
-
 
     <div id="page4">
         <section id="p4">
