edit climate change content

--- a/public/climate-change/index.html
+++ b/public/climate-change/index.html
@@ -68,7 +68,7 @@
                     <li><a href="https://www3.epa.gov/climatechange/kids/faq.html">EPA</a> educating younger generations about climate change.</li>
                     <li><a href="https://climate.nasa.gov/effects/">NASA</a> presents detailed evidence about the cause and effects of climate change.</li>
                     <li>One of the <a href="http://www.un.org/sustainabledevelopment/climate-change-2/">UN</a>'s sustainable development goals is to take urgent action to combat climate change and its impacts.</li>
-                    <li>All countries signed the <a href="http://unfccc.int/paris_agreement/items/9485.php">Paris Agreement</a> that stated that all countries would work to limit global temperature rise.</li>
+                    <li>Countries in the UN signed the <a href="http://unfccc.int/paris_agreement/items/9485.php">Paris Agreement</a> that stated that all countries would work to limit global temperature rise.</li>
                 </ul>
              <div id="scroll5">
             <h1><a href="#page1">TOP</a></h1>
