fix deforestation page bugs

--- a/public/deforestation/index.html
+++ b/public/deforestation/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Deforestation</title>
+    <link rel="stylesheet" type="text/css" href="../css/main.css">
     <link rel="stylesheet" type="text/css" href="../css/deforestation.css">
     <link href="https://fonts.googleapis.com/css?family=Dosis|Economica|Quicksand" rel="stylesheet">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
@@ -11,15 +12,17 @@
 </head>
     
 <body>
-	<header>
-		<h1>DEFORESTATION</h1>
-        <a href="../../views/index.ejs" id="gohome">
-            <img src="../img/homeicon.png">
-        </a>
-	</header>
+
+  <header>
+    <h1>DEFORESTATION</h1>
+    <a href="/" id="gohome">
+      <img src="../img/homeicon.png">
+    </a>
+  </header>
 
 
-    <div class="page1">
+
+    <div class="page" id="page1">
         <!-- <div id="title">
             <h1>DEFORESTATION</h1>
         </div> -->
@@ -55,7 +58,7 @@
 
 
 
-    <div id="page2">
+    <div class="page" id="page2">
 
         <!--background image-->
         <!-- <img src="img/tent.jpg"> -->
@@ -71,7 +74,7 @@
 
 
 
-    <div id="page3">
+    <div class="page" id="page3">
 
         <!--background image-->
         <!-- <img src="img/deforest.jpg"> -->
@@ -87,7 +90,7 @@
     </div>
 
 
-    <div id="page4">
+    <div class="page" id="page4">
  
         <!--background image-->
 
@@ -104,7 +107,7 @@
     </div>
 
 
-    <div id="page5">
+    <div class="page" id="page5">
 
         <!--background image-->
 <!--         <img src="img/koala.jpg">--> <!--(Image via @ApesFinal)--> 
@@ -120,7 +123,7 @@
     </div>
 
 
-    <div id="page6">
+    <div class="page" id="page6">
 
         <!--background image-->
 <!--         <img src="img/forestsun.jpg">
