Added images and content for species extinction

--- a/public/species-extinction/index.html
+++ b/public/species-extinction/index.html
@@ -10,15 +10,47 @@
 
 	<body>
 		<header>
-        	<h1>EXTINCTION</h1>
+        	<h1>SPECIES EXTINCTION</h1>
     	</header>
 
-		<div>
+		<div id="page1">
 			<!-- look at other pages for content structure -->
 			
-			<p>Species Extinction Stuff here.</p>
+			<p>Earth, home to about 8.7 million species.</p>
+			<p>These 8.7 million documented species include all animals and plants alike.</p>
+			<p>They also play a major role in ensuring the resilence of the various ecosystems.</p>
+
 		</div>
 
+		<div id="page2">
+			
+			<p>While extinction is considered a natural phenomenon that occurs in the background, Our planet is experiencing a huge wave of extinction in both plants and animals.</p>
+			<p>In our current state, scientist are estimating that we are now losing about 1,000 to 10,000 times the normal rate of extinction.</p>
+		</div>
+
+		<div id="page3">
+			
+			<p>Most of the past waves of extinctions were caused by events such as volcanic eruptions, asteroid strikes or natural climate shifts.</p>
+			<p>However, the current crisis is considered to be caused by none other than us, humans.</p>
+			<p>The introduction of developing socities created more human activies which in turn introduced more exotic species but also drove animals out of their normal habitats as well as created the <a href="../climate-change/index.html">global warming crisis.</a></p>
+		</div>
+
+		<div id="page4">
+			<p>There may not be clear estimate as to how many species are in actual danger of becoming extinct.</p>
+			<p>It is very clear how big of an issue species extinction really is as well as the increasing numbers of species that are at risk of possibly disappearing forever.</p>
+		</div>
+
+		<div id="page5">
+			<p>There are lots of people and organizations working towards discovering which species are heading towards extinction.</p>
+			<ul>
+				<li><a href="http://www.biologicaldiversity.org/">Center for Biological Diversity</a></li>
+				<li><a href="http://www.ifaw.org/united-states">International Fund for Animal Welfare</a></li>
+				<li><a href="http://www.seashepherd.org/">Sea Sheperd Conservation Society (SSCS)</a></li>
+				<li><a href="http://www.defenders.org/">Defenders of Wildlife</a></li>
+				<li><a href="https://www.panthera.org/">Panthera</a></li>
+				<li><a href="http://www.savethemanatee.org/">Save the Manatee Club</a></li>
+			</ul>
+		</div>
 		
 	</body>
 
