fixed home icon positioning

--- a/public/deforestation/index.html
+++ b/public/deforestation/index.html
@@ -93,7 +93,7 @@
         </div>
 
 
-        <div class="pt-section" data-name="Section Four, the fourth section" id="ptsection-four">
+        <div class="pt-section" data-name="Section Four" id="ptsection-four">
             <div class="page" id="page4">
                 <!--background image-->
                 <!--<img src="img/slashnburn.jpg">-->
