--- a/public/climate-change/index.html
+++ b/public/climate-change/index.html
@@ -50,10 +50,15 @@
 
     <div id="page4">
         <section id="p4">
-            <p>Add climate change effects</p>
-            <p>Global emissions of carbon dioxide have risen 50% since 1990.</p>
-            <p></p>
-            <p>Rising sea levels</p>
+            <p>The effects of climate change include: </p>
+            <ul>
+                <li>Rising sea levels and temperatures</li>
+                <li>Changes in preciptation patterns</li>
+                <li>Stronger and more intense hurricanes</li>
+                <li>More droughts and heat waves</li>
+            </ul>
+            <p>Why do these matter to you?</p>
+            <p>Well, 40% of the world's population lives within 100 kilometers of the coast.</p>
        </section>
           <div id="scroll4">
             <h1><a href="#page5">SCROLL DOWN</a></h1>
