Finished Pollution content

--- a/public/pollution/index.html
+++ b/public/pollution/index.html
@@ -55,10 +55,15 @@
 		</div>
 
 		<div id="page6">
-			
+			<!-- <img src="../pollution/img/pollution.jpg"> -->
 			<p>No matter what type of pollution, both humans and wildlife are constantly being affected.</p>
 			<p>To learn more about Pollution and what YOU can do to help, feel free to visit these links:</p>
-			<p>Links here.</p>
+			<ul>
+				<li><a href="https://www.worldwildlife.org/threats/pollution">World Wildlife Fund</a></li>
+				<li><a href="https://www.epa.gov/p2">Environmental Protection Agency</a></li>
+				<li><a href="https://www.fedcenter.gov/programs/p2/">FedCenter.gov</a></li>
+			</ul>
+			
 		</div>
 	</body>
 
