New font for pages

--- a/public/deforestation/index.html
+++ b/public/deforestation/index.html
@@ -4,10 +4,9 @@
     <title>Deforestation</title>
     <link rel="stylesheet" type="text/css" href="../css/main.css">
     <link rel="stylesheet" type="text/css" href="../css/deforestation.css">
-    <link href="https://fonts.googleapis.com/css?family=Dosis|Economica|Quicksand" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Muli:700" rel="stylesheet">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="../js/stickyheader.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Dosis|Economica|Quicksand:700" rel="stylesheet">
 
     <link rel="stylesheet" type="text/css" href="../css/jquery.progresstracker.css">
     <!-- <link rel="stylesheet" type="text/css" href="static/css/demo.css"> -->
