--- a/public/climate-change/index.html
+++ b/public/climate-change/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>Climate Change</title>
     <link rel="stylesheet" type="text/css" href="../css/climatechange.css" />
-    <link href="https://fonts.googleapis.com/css?family=Dosis|Economica|Quicksand:700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Muli:700" rel="stylesheet">
 </head>
     
 <body>
