--- a/public/species-extinction/index.html
+++ b/public/species-extinction/index.html
@@ -5,6 +5,7 @@
    		<meta http-equiv="X-UA-Compatible" content="IE=edge">
    		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Species Extinction</title>
+		<link href="https://fonts.googleapis.com/css?family=Muli:700" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="../css/extinction.css" />
 	</head>
 
