add video to climate change

--- a/public/climate-change/index.html
+++ b/public/climate-change/index.html
@@ -64,8 +64,10 @@
             <h1><a href="#page5">SCROLL DOWN</a></h1>
         </div>
     </div>
-
-    <div id="page5">
+    <div id= "page5">
+        <!-- video on this page https://www.youtube.com/watch?v=EtW2rrLHs08&t=128s --> 
+    </div>
+    <div id="page6">
         <section id="p5">
             <p>People and organizations around the world have made it their mission to combat climate change:  </p>
                 <ul>
