add video idea for pollution

--- a/public/pollution/index.html
+++ b/public/pollution/index.html
@@ -34,7 +34,7 @@
 		</div>
 
 		<div id="page3">
-			
+			<!-- possible video for air pollution https://www.youtube.com/watch?v=fJ0o2E4d8Ts --> 
 			<!-- <img src="../pollution/img/air-pollution.png"> -->
 			<p>Air Pollution</p>
 			<p>Occurs when dangerous gases and chemical vapors are introduced into the atmosphere through the burning of fossil fuels, smoke and smog as well as greenhouse gases.</p>
