Updated Font style for pages

--- a/public/climate-change/index.html
+++ b/public/climate-change/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Climate Change</title>
+    <link rel="stylesheet" type="text/css" href="../css/main.css">
     <link rel="stylesheet" type="text/css" href="../css/climatechange.css" />
     <link href="https://fonts.googleapis.com/css?family=Muli:700" rel="stylesheet">
 </head>
