--- a/public/species-extinction/index.html
+++ b/public/species-extinction/index.html
@@ -6,6 +6,7 @@
    		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Species Extinction</title>
 		<link href="https://fonts.googleapis.com/css?family=Muli:700" rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="../css/main.css">
 		<link rel="stylesheet" type="text/css" href="../css/extinction.css" />
 	</head>
 
