--- a/public/deforestation/index.html
+++ b/public/deforestation/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Deforestation</title>
     <link rel="stylesheet" type="text/css" href="../css/main.css">
-    <link rel="stylesheet" type="text/css" href="../css/deforestation.css">
+    <link rel="stylesheet" type="text/css" href="../css/all4topics.css">
     <link href="https://fonts.googleapis.com/css?family=Muli:700" rel="stylesheet">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <meta charset="utf-8">
@@ -46,11 +46,7 @@ http://www.jqueryscript.net/slider/Fullscreen-Vertical-Page-Carousel-Plugin-For-
         <div class="vertical-carousel-box">
             <div id="a" class="item active">
                 <span></span>
-                <div class="page" id="page1">
-                    <!-- <div id="title">
-                        <h1>DEFORESTATION</h1>
-                    </div> -->
-
+                <div class="page" id="defpage1">
                     <!-- video used for full screen background-->
                     <!-- example http://www.stayandwander.com/ -->
                     <!-- <video playsinline autoplay muted loop id="forestvid">
@@ -77,7 +73,7 @@ http://www.jqueryscript.net/slider/Fullscreen-Vertical-Page-Carousel-Plugin-For-
 
             <div id="b" class="item">
                 <span></span>
-                <div class="page" id="page2">
+                <div class="page" id="defpage2">
                     <!--background image-->
                     <!-- <img src="img/tent.jpg"> -->
                     <section id="p2" class="text">
@@ -95,7 +91,7 @@ http://www.jqueryscript.net/slider/Fullscreen-Vertical-Page-Carousel-Plugin-For-
 
             <div id="c" class="item">
                 <span></span>
-                <div class="page" id="page3">
+                <div class="page" id="defpage3">
                     <!--background image-->
                     <!-- <img src="img/deforest.jpg"> -->
                     <section id="p3" class="text">
@@ -114,7 +110,7 @@ http://www.jqueryscript.net/slider/Fullscreen-Vertical-Page-Carousel-Plugin-For-
 
             <div id="d" class="item">
                 <span></span>
-                <div class="page" id="page4">
+                <div class="page" id="defpage4">
                     <!--background image-->
                     <!--<img src="img/slashnburn.jpg">-->
                     <section class="text">
@@ -131,7 +127,7 @@ http://www.jqueryscript.net/slider/Fullscreen-Vertical-Page-Carousel-Plugin-For-
 
             <div id="e" class="item">
                 <span></span>
-                <div class="page" id="page5">
+                <div class="page" id="defpage5">
                     <!--background image-->
                     <!--         <img src="img/koala.jpg">--> <!--(Image via @ApesFinal)--> 
                     <section class="text">
@@ -149,7 +145,7 @@ http://www.jqueryscript.net/slider/Fullscreen-Vertical-Page-Carousel-Plugin-For-
 
             <div id="f" class="item">
                 <span></span>
-                <div class="page" id="page6">
+                <div class="page" id="defpage6">
                     <!--background image-->
                     <!--<img src="img/forestsun.jpg">-->   
                     <section class="text">
