add more lines to climate change page 4

--- a/public/climate-change/index.html
+++ b/public/climate-change/index.html
@@ -60,6 +60,9 @@
             </ul>
             <p>Why do these matter to you?</p>
             <p>Well, 40% of the world's population lives within 100 kilometers of the coast.</p>
+            <p>By 2100, it is predicted that 1.9 million U.S. homes will be underwater due to the rise in sea levels.</p>
+            <p>Hurricanes can wipe out entire cities, as seen in 2005 when Hurricane Katrina struck the Gulf Coast.</p>
+            <p>More droughts mean less water for you to consume and use on a daily basis. No more long showers or green front lawns.</p>
        </section>
           <div id="scroll4">
             <h1><a href="#page5">SCROLL DOWN</a></h1>
